# pandocsql

./: .travis.yml  README.md  pyproject.toml
.github/workflows/: check.yml
examples/: job-search-output.md  job-search.md
pandocsql/: __init__.py
tests/: test_base.py
