[tool.poetry]
name = "pandocsql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
panflute = "^1.12"

[tool.poetry.dev-dependencies]
ipython = "^7.11"
flake8 = "*"
black = { version = "*", allows-prereleases = true }
flake8-black = "^0.1"

[tool.poetry.scripts]
pandocsql = 'pandocsql:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
