[tool.poetry]
name = "pandocsql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
panflute = "^1.11"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"
flake8 = "*"
black = { version = "*", allow-prereleases = true }
flake8-black = "*"
pytest = "*"

[tool.poetry.scripts]
pandocsql = 'pandocsql:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
