[tool.poetry]
name = "pandocsql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
panflute = "^2.3.0"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"
flake8 = "*"
black = { version = "*", allow-prereleases = true }
flake8-black = "*"

[tool.poetry.scripts]
pandocsql = 'pandocsql:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
